--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Bypass archive.is Brave & Dissenter ban",
   "short_name": "Bypass archive.is ban",
   "description": "This is an extension to bypass archive.is' ban on Brave based browsers.",
-  "version": "3",
+  "version": "4",
   "author": "",
   "browser_action": {
     "default_title": "Bypass archive.is ban"
@@ -17,8 +17,7 @@
     }
   ],
   "background": {
-	"scripts": ["background.js"],
-	"persistent": false
+	"scripts": ["background.js"]
   },
-  "permissions": ["activeTab","cookies","https://archive.is/*", "https://archive.vn/*", "https://archive.today/*", "https://archive.fo/*", "https://archive.li/*", "https://archive.md/*", "https://archive.ph/*"]
+  "permissions": ["activeTab","cookies","webRequest","webRequestBlocking","https://archive.is/*", "https://archive.vn/*", "https://archive.today/*", "https://archive.fo/*", "https://archive.li/*", "https://archive.md/*", "https://archive.ph/*"]
 }
